# py-yaml-conf

./: LICENSE  README.md  pyproject.toml
config/: config.py  config_test.py
testdata/: default.yaml  test.yaml  test2.yaml
